<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="menu_settings">配置</string>
    <string name="app_name">记账</string>
    <string name="main_shouye">首页</string>
    <string name="main_diary">发送</string>
    <string name="main_config">配置</string>
    <string name="main_report">报表</string>
    <string name="main_more">更多</string>
    <string name="hello">Hello 111!</string>
    <string name="licaixitongtitle">理财系统</string>
    <string name="timestr">收支日期</string>
    <string name="timestr2">记录日期</string>
    <string name="diary_type">日记类别</string>
    <string name="tip_type">提醒类别</string>
    <string name="moneystr">收支金额</string>
    <string name="sortstr">收支类别</string>
    <string name="moneydesc">收支说明</string>
    <string name="urlstr">请输入网址</string>
    <string name="callstr">请输入电话</string>
    <string name="urlbtn">打开网页</string>
    <string name="callbtn">打电话</string>
    <string name="ididentify">请输入身份证号</string>
    <string name="ididentifybtn">验证</string>
    <string name="idshibietitle">身份证校验</string>
    <string name="ididentifytext">18位身份证号</string>
    <string name="showmessage">屏幕高宽</string>
    <string name="savemoney_msg">保存消费信息</string>
    <string name="msg_return">确定要返回么?</string>
    <string name="con_info_msg">信息提示</string>
    <string name="con_save">保存</string>
    <string name="delete_tip">清除提醒</string>
    <string name="save_success">保存成功</string>
    <string name="config_remoteport">端口</string>
    <string name="save_failure">保存失败</string>
    <string name="savetoserverbtn">GAE保存</string>
    <string name="savetoserverbtn2">远端保存</string>
    <string name="delete_button">删除全部</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_all_confirm">确定删除全部？不可以恢复！</string>
    <string name="delete_confirm">确定删除？不可以恢复！</string>
    <string name="waitting">请稍等</string>
    <string name="sendingdata">正在传送数据,请等待..</string>
    <string name="con_ok">确定</string>
    <string name="con_see_button">查看全部</string>
    <string name="con_return">返回</string>
    <string name="con_returnTop">顶级</string>
    <string name="con_back">上级</string>
    <string name="con_statistics">统计分析</string>
    <string name="con_statistics_title">你选择的统计分析是：</string>
    <string name="con_cancel">取消</string>
    <string name="con_about">关于</string>
    <string name="con_aboutStr">测试代码程序</string>
    <string name="con_setStr">配置</string>
    <string name="con_quitStr">确定退出程序么？</string>
    <string name="con_leave">离开</string>
    <string name="con_sort_prompt">请选择收支类别</string>
    <string name="con_diarysort_prompt">请选择日记类别</string>
    <string name="con_chooseDate">点击选择日期</string>
    <string name="dialog_menu_item_0">二维码名片</string>
    <string name="dialog_menu_item_1">普通名片</string>
    <string name="dialog_menu_item_2">编辑该名片</string>
    <string name="dialog_menu_item_3">编辑该名片</string>
    <string name="config_username">用户名</string>
    <string name="config_remoteIp">远程ip</string>
    <string name="config_ok">保存配置成功</string>
    <string name="config_pasword">密码</string>
    <string name="config_inpasword">请输入密码</string>
    <string name="config_inremoteIp">192.168.1.10</string>
    <string name="config_inremotePort">9999</string>
    <string name="config_inusername">请输入用户名</string>
    <string name="config_please_pasword">密码为至少6位数字</string>
    <string name="config_show_pasword">显示密码</string>
    <string name="login_sure">登陆</string>
    <string name="error_user">用户名错误</string>
    <string name="error_pass">密码错误</string>
    <string name="default_user">默认user</string>
    <string name="default_pass">默认1</string>
    <string name="dft_user">user</string>
    <string name="dft_pass">1</string>
    <string name="login_quit">退出</string>
    <string name="homepage">首页</string>
    <string name="sendmoney">发送金额数据</string>
    <string name="senddiary">发送日记数据</string>
    <string name="sendgongguo">发送功过数据</string>
    <string name="more_config">配置信息</string>
    <string name="more_tree">树形结构</string>
    <string name="more_deletemoney">删除金额</string>
    <string name="more_backupall">备份全部数据</string>
    <string name="more_gongguo">功过记录</string>
    <string name="more_diary">私人日记</string>
    <string name="more_moneyreport">类别报表</string>
    <string name="more_tip">设置提醒</string>
    <string name="more_sendgongguo">同步功过数据</string>
    <string name="more_sendmoney">同步金额数据</string>
    <string name="more_senddiary">同步日记数据</string>
    <string name="more_gongguolist">功过列表</string>
    <string name="more_diarylist">日记列表</string>
    <string name="more_moneylist">金额列表</string>
    <string name="more_hualun">测试滑轮</string>
    <string name="gongguo_title">功过记录</string>
    <string name="gongguo_list">功过列表</string>
    <string name="diary_list">日记列表</string>
    <string name="diary_title">日记本</string>
    <string name="tip_title">提醒</string>
    <string name="diary_date">发生日期</string>
    <string name="tip_date">提醒日期</string>
    <string name="diary_time">时间</string>
    <string name="diary_content">日记内容</string>
    <string name="tip_content">提醒内容</string>
    <string name="diary_jiami">日记加密</string>
    <string name="gongguo_plan">计    划</string>
    <string name="gongguo_planmake">制定计划</string>
    <string name="gongguo_toPlan">请制定计划</string>

</resources>