<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearlayout_contentView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/menu_height"
        android:padding="0dp" >

        <TextView
            android:id="@+id/titile_gre_ym"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_height"
            android:layout_gravity="center"
            android:background="@drawable/topnavbg"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@drawable/white"
            android:textSize="@dimen/titleTextSize" />

        <Button
            android:id="@+id/leave_btn"
            android:layout_width="@dimen/title_btn_width"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:padding="0dp"
            android:text="@string/con_leave"
            android:textSize="15sp" />
    </FrameLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_corner_gridview"
        android:padding="10dp" >

        <TableRow>

            <TextView
                android:id="@+id/money"
                style="@style/textstyle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moneystr"
                android:textSize="@dimen/editTextSize" >
            </TextView>

            <EditText
                android:id="@+id/moneyText"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_width"
                android:layout_weight="1"
                android:numeric="decimal"
                android:textSize="@dimen/editTextSize" >
            </EditText>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/time"
                style="@style/textstyle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timestr"
                android:textSize="@dimen/editTextSize" >
            </TextView>

            <Button
                android:id="@+id/chooseTime_btn2"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_width"
                android:layout_weight="1"
                android:text="@string/con_chooseDate"
                android:textSize="@dimen/editTextSize" >
            </Button>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/sort"
                style="@style/textstyle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sortstr"
                android:textSize="@dimen/editTextSize" >
            </TextView>

            <Spinner
                android:id="@+id/spinner_sort"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_width"
                android:layout_weight="1"
                android:drawSelectorOnTop="true"
                android:prompt="@string/con_sort_prompt"
                android:textSize="@dimen/editTextSize" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/moneydesc"
                style="@style/textstyle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moneydesc"
                android:textSize="@dimen/editTextSize" >
            </TextView>

            <EditText
                android:id="@+id/moneyDescText"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_width"
                android:layout_weight="1"
                android:gravity="left|top"
                android:inputType="textMultiLine"
                android:lines="5"
                android:textSize="@dimen/editTextSize" >
            </EditText>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/savebtn"
        style="@style/saveBtnStyle" />

</LinearLayout>