<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearlayout_contentView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/titile_gre_ym"
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_height"
        android:background="@drawable/topnavbg"
        android:gravity="center"
        android:text="@string/diary_title"
        android:textColor="@drawable/white"
        android:textSize="@dimen/titleTextSize" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_corner_gridview"
        android:padding="10dp" >

        <TableRow>

            <TextView
                style="@style/textstyle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diary_date"
                android:textSize="@dimen/editTextSize" >
            </TextView>

            <Button
                android:id="@+id/chooseDate_btn"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_width"
                android:layout_weight="1"
                android:text="@string/con_chooseDate"
                android:textSize="@dimen/editTextSize" >
            </Button>
        </TableRow>

        <TableRow>

            <TextView
                style="@style/textstyle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diary_time"
                android:textSize="@dimen/editTextSize" >
            </TextView>

            <Button
                android:id="@+id/chooseTime_btn"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_width"
                android:layout_weight="1"
                android:text="@string/con_chooseDate"
                android:textSize="@dimen/editTextSize" >
            </Button>
        </TableRow>

        <TableRow>

            <TextView
                style="@style/textstyle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diary_content"
                android:textSize="@dimen/editTextSize" >
            </TextView>

            <EditText
                android:id="@+id/diaryContent"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_width"
                android:layout_weight="1"
                android:gravity="left|top"
                android:inputType="textMultiLine"
                android:lines="5"
                android:textSize="@dimen/editTextSize" >
            </EditText>
        </TableRow>

        <TableRow>

            <TextView
                style="@style/textstyle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diary_jiami"
                android:textSize="@dimen/editTextSize" >
            </TextView>

            <ImageView
                android:id="@+id/jiami"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:src="@drawable/off_bg"
                android:layout_marginLeft="5dp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/saveDiary_btn"
        style="@style/saveBtnStyle" />

</LinearLayout>