<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearlayout_contentView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/menu_height"
        android:padding="0dp" >

        <TextView
            android:id="@+id/titile_gre_ym"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_height"
            android:layout_gravity="center"
            android:background="@drawable/topnavbg"
            android:gravity="center"
            android:text="@string/tip_title"
            android:textColor="@drawable/white"
            android:textSize="@dimen/titleTextSize" />

        <Button
            android:id="@+id/leave_btn"
            android:layout_width="@dimen/title_btn_width"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:padding="0dp"
            android:text="@string/con_leave"
            android:textSize="15sp" />
    </FrameLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_corner_gridview"
        android:padding="10dp" >

        <TableRow>

            <TextView
                style="@style/textstyle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_date"
                android:textSize="@dimen/editTextSize" >
            </TextView>

            <TextView
                android:id="@+id/tip_date"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_width"
                android:layout_weight="1"
                android:textSize="@dimen/editTextSize" >
            </TextView>
        </TableRow>

        <TableRow>

            <TextView
                style="@style/textstyle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diary_time"
                android:textSize="@dimen/editTextSize" >
            </TextView>

            <TextView
                android:id="@+id/tip_time"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_width"
                android:layout_weight="1" 
                android:textSize="@dimen/editTextSize" >
            </TextView>
        </TableRow>

        <TableRow>

            <TextView
                style="@style/textstyle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_type"
                android:textSize="@dimen/editTextSize" >
            </TextView>

            <TextView
                android:id="@+id/tip_type"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_width"
                android:layout_weight="1" 
                android:textSize="@dimen/editTextSize" >
            </TextView>
        </TableRow>

        <TableRow>

            <TextView 
                style="@style/textstyle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_content"
                android:textSize="@dimen/editTextSize" >
            </TextView>

            <TextView
                android:id="@+id/tip_content"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_width"
                android:layout_weight="1" 
                android:textSize="@dimen/editTextSize" >
            </TextView>
        </TableRow> 
        
    </TableLayout>

    <Button
        android:id="@+id/deletebtn"
        style="@style/deleteTipStyle" />

</LinearLayout>