<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.renjie"
    android:id="@+id/LinearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/menu_height"
        android:padding="0dp" >

        <TextView
            android:id="@+id/menu_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_height"
            android:layout_gravity="center"
            android:background="@drawable/topnavbg"
            android:gravity="center"
            android:text="@string/main_report"
            android:textColor="@drawable/white"
            android:textSize="@dimen/titleTextSize" />

        <Button
            android:id="@+id/backbtn"
            android:layout_width="@dimen/title_btn_width"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:padding="0dp"
            android:text="@string/con_back"
            android:textSize="15sp" />

        <Button
            android:id="@+id/top_btn"
            android:layout_width="@dimen/title_btn_width"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:padding="0dp"
            android:text="@string/con_returnTop"
            android:textSize="15sp" />
    </FrameLayout>

    <ListView
        android:id="@+id/ListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:cacheColorHint="#00000000" >
    </ListView>

</LinearLayout>